--- a/WPF/Windows/BackgroundTaskWindow.xaml
+++ b/WPF/Windows/BackgroundTaskWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="AAP.BackgroundTaskWindow"
+﻿<Window x:Class="AAP.UI.Windows.BackgroundTaskWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AAP"
+        xmlns:local="clr-namespace:AAP.UI.Windows" xmlns:viewmodels="clr-namespace:AAP.UI.ViewModels"
         mc:Ignorable="d"
         Title="BackgroundTaskWindow" Height="138" ResizeMode="NoResize" SizeToContent="Width" ShowInTaskbar="False">
     <Window.Resources>
-        <local:BackgroundTaskViewModel x:Name="ViewModel" x:Key="ViewModel"/>
+        <viewmodels:BackgroundTaskViewModel x:Name="ViewModel" x:Key="ViewModel"/>
     </Window.Resources>
     <Grid>
         <Label Margin="10,10,10,10" VerticalAlignment="Top" Content="{Binding TaskState, Source={StaticResource ViewModel}}"/>
