--- a/WPF/Windows/NewASCIIArtDialogWindow.xaml
+++ b/WPF/Windows/NewASCIIArtDialogWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="AAP.NewASCIIArtDialogWindow"
+﻿<Window x:Class="AAP.UI.Windows.NewASCIIArtDialogWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AAP"
+        xmlns:local="clr-namespace:AAP.UI.Windows" xmlns:viewmodels="clr-namespace:AAP.UI.ViewModels"
         mc:Ignorable="d"
         Title="Create New ASCII Art" Height="150" Width="300" ResizeMode="NoResize">
     <Window.Resources>
-        <local:NewASCIIArtDialogViewModel x:Name="newFileDialogViewModel" x:Key="NewFileDialogViewModel"/>
+        <viewmodels:NewASCIIArtDialogViewModel x:Name="newFileDialogViewModel" x:Key="NewFileDialogViewModel"/>
     </Window.Resources>
     <Grid>
         <Button Content="Create new ASCII art" Margin="10,0,10,5" VerticalAlignment="Bottom" Click="CreateButton_Click"/>
